Fix overshooting table and score z-index

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,11 @@
 		color: #42226d;
 	}
 
+	#container {
+		background-color: transparent;
+	}
+
+
 	a {
 		text-decoration: none;
 		color: #42226d;
@@ -87,7 +92,6 @@
 		top: 40%;
 		left: 50%;
 		transform: translateX(-50%) translateY(-50%);
-		z-index: 1;
 		opacity: 1;
 		font-family: Roboto Condensed, sans-serif;
 		user-select: none;
@@ -96,6 +100,7 @@
 		-ms-user-select: none;
 		-o-user-select: none;
 		cursor: default;
+		z-index: -1;
 	}
 
 	#reset {
